# tdd-claude-dev-container

./: .env.example  .gitignore  Makefile  README.md  docker-compose.yml
.beads/: issues.jsonl
.github/: dependabot.yml
.github/workflows/: ci.yml
backend/: .gitignore  Dockerfile  README.md  pyproject.toml
backend/app/: __init__.py  config.py  database.py  main.py
backend/app/models/: __init__.py  contracts.py  project.py
backend/app/routers/: containers.py  projects.py
backend/app/services/: cli_runner.py  docker_manager.py
backend/app/websockets/: terminal.py
backend/tests/: conftest.py
backend/tests/contracts/: test_contracts.py
backend/tests/fixtures/: projects.py
backend/tests/integration/: test_cli_runner.py  test_docker_manager.py  test_websocket_stream.py
backend/tests/unit/: test_config.py  test_containers_router.py  test_database.py  test_health.py  test_projects_router.py
docker/claude-cli/: Dockerfile  entrypoint.sh  mock-claude.sh
docs/: LAUNCH.md  SPAWN_PARALLEL.md
docs/agents/: AGENT_BACKEND.md  AGENT_CONTRACTS.md  AGENT_DOCUMENTATION.md  AGENT_ENVIRONMENT.md  AGENT_FIXTURE.md  AGENT_FRONTEND.md  AGENT_INFRA.md  AGENT_MERGE.md  AGENT_REVIEW_BACKEND.md  AGENT_REVIEW_FRONTEND.md  AGENT_REVIEW_INFRA.md  AGENT_REVIEW_INTEGRATION.md  AGENT_WATCHDOG.md
docs/design/: design.md  testing.md
docs/launch/: START.md  phase-0.md  phase-1.md  phase-2.md  phase-3.md  phase-4.md
frontend/: .gitignore  Dockerfile  package-lock.json  package.json  svelte.config.js  vite.config.ts
frontend/src/: app.css  app.html
frontend/src/routes/: +layout.svelte  +page.svelte
frontend/static/: manifest.json
frontend/tests/fixtures/: api-mocks.ts  websocket-mock.ts
scripts/: setup-worktrees.sh  test-all.sh  verify-environment.sh
(+8 files in other folders)
